reference/5.1/PSReadLine/PSReadLine.md
---
Download Help Link: https://go.microsoft.com/fwlink/?LinkId=528806
Help Version: 5.2.0.0
keywords: PowerShell
Locale: en-US
Module Guid: 5714753b-2afd-4492-a5fd-01d9e2cff8b5
Module Name: PSReadLine
ms.date: 12/07/2018
schema: 2.0.0
title: PSReadLine
ms.openlocfilehash: cdc94f7e061d3f0209fae76b0955dc7359d4da6a
ms.sourcegitcommit: ae8b89e12c6fa2108075888dd6da92788d6c2888
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/21/2020
ms.locfileid: "93224722"
---
# <span data-ttu-id="aaea8-103">PSReadLine 모듈</span><span class="sxs-lookup"><span data-stu-id="aaea8-103">PSReadLine Module</span></span>

## <span data-ttu-id="aaea8-104">Description</span><span class="sxs-lookup"><span data-stu-id="aaea8-104">Description</span></span>

<span data-ttu-id="aaea8-105">PSReadLine 모듈에는 PowerShell에서 명령줄 편집 환경을 사용자 지정할 수 있는 cmdlet이 포함 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-105">The PSReadLine module contains cmdlets that let you customize the command-line editing environment in PowerShell.</span></span> <span data-ttu-id="aaea8-106">이러한 문서는 PSReadLine v 2.0 문서입니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-106">These articles documents PSReadLine v2.0.</span></span> <span data-ttu-id="aaea8-107">이 버전은 PowerShell v6 및 Windows 10 10 월 2018 업데이트 (빌드 1809)에서 제공 됩니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-107">This version ships in PowerShell v6 and the Windows 10 October 2018 Update (Build 1809).</span></span>

## <span data-ttu-id="aaea8-108">PSReadLine Cmdlet</span><span class="sxs-lookup"><span data-stu-id="aaea8-108">PSReadLine Cmdlets</span></span>

### [<span data-ttu-id="aaea8-109">PSConsoleHostReadLine</span><span class="sxs-lookup"><span data-stu-id="aaea8-109">PSConsoleHostReadLine</span></span>](PSConsoleHostReadLine.md)
<span data-ttu-id="aaea8-110">PSReadLine의 주 진입점입니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-110">The main entry point for PSReadLine.</span></span>

### [<span data-ttu-id="aaea8-111">Get-PSReadLineKeyHandler</span><span class="sxs-lookup"><span data-stu-id="aaea8-111">Get-PSReadLineKeyHandler</span></span>](Get-PSReadLineKeyHandler.md)
<span data-ttu-id="aaea8-112">PSReadLine 모듈에 대 한 키 바인딩을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-112">Gets the key bindings for the PSReadLine module.</span></span>

### [<span data-ttu-id="aaea8-113">Get-PSReadLineOption</span><span class="sxs-lookup"><span data-stu-id="aaea8-113">Get-PSReadLineOption</span></span>](Get-PSReadLineOption.md)
<span data-ttu-id="aaea8-114">구성할 수 있는 옵션의 값을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-114">Gets values for the options that can be configured.</span></span>

### [<span data-ttu-id="aaea8-115">PSConsoleHostReadLine</span><span class="sxs-lookup"><span data-stu-id="aaea8-115">PSConsoleHostReadLine</span></span>](PSConsoleHostReadLine.md)
<span data-ttu-id="aaea8-116">이 함수는 PSReadLine의 주 진입점입니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-116">This function is the main entry point for PSReadLine.</span></span>

### [<span data-ttu-id="aaea8-117">Remove-PSReadLineKeyHandler</span><span class="sxs-lookup"><span data-stu-id="aaea8-117">Remove-PSReadLineKeyHandler</span></span>](Remove-PSReadLineKeyHandler.md)
<span data-ttu-id="aaea8-118">키 바인딩을 제거 합니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-118">Removes a key binding.</span></span>

### [<span data-ttu-id="aaea8-119">Set-PSReadLineKeyHandler</span><span class="sxs-lookup"><span data-stu-id="aaea8-119">Set-PSReadLineKeyHandler</span></span>](Set-PSReadLineKeyHandler.md)
<span data-ttu-id="aaea8-120">키를 사용자 정의 또는 PSReadLine 키 처리기 함수에 바인딩합니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-120">Binds keys to user-defined or PSReadLine key handler functions.</span></span>

### [<span data-ttu-id="aaea8-121">Set-PSReadLineOption</span><span class="sxs-lookup"><span data-stu-id="aaea8-121">Set-PSReadLineOption</span></span>](Set-PSReadLineOption.md)
<span data-ttu-id="aaea8-122">**Psreadline** 에서 명령줄 편집의 동작을 사용자 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="aaea8-122">Customizes the behavior of command line editing in **PSReadLine**.</span></span>

